# utf8-tools

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  makefile
examples/: main.cpp
lib/: CMakeLists.txt
lib/tools/: CMakeLists.txt  utf8-tools.cpp
src/: utf8-tools.cpp  utf8-tools.h
